WebAssembly components now added to the dist, updated the .gitignore to ignore the dist folder

--- a/angular.json
+++ b/angular.json
@@ -21,7 +21,8 @@
             "aot": true,
             "assets": [
               "src/favicon.ico",
-              "src/assets"
+              "src/assets",
+              { "glob": "**/*", "input": "src/app/assembly/", "output": "/assembly" }
             ],
             "styles": [
               "src/styles.css"
