Still getting the 404, may need nginx

--- a/angular.json
+++ b/angular.json
@@ -22,7 +22,7 @@
             "assets": [
               "src/favicon.ico",
               "src/assets",
-              { "glob": "**/*", "input": "src/app/assembly/", "output": "/assembly" }
+              { "glob": "**/*", "input": "src/app/assembly/", "output": "/assembly/" }
             ],
             "styles": [
               "src/styles.css"
